Fix tag being wrapped in mobile mode

--- a/shortcodes/epfl_labs_search/epfl-labs-search.css
+++ b/shortcodes/epfl_labs_search/epfl-labs-search.css
@@ -1,6 +1,6 @@
-.list .flex-row:nth-of-type(odd) {
+.site-row:nth-of-type(odd) {
     background-color: #E6E6E6;
 }
-.list .flex-row:nth-of-type(even) {
+.site-row:nth-of-type(even) {
     background-color: #FFFFFF;
 }
